--- a/Langwitch/composer.json
+++ b/Langwitch/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "*",
-        "spatie/laravel-html": "^3.5"
+        "spatie/laravel-html": "^3.5",
+        "stichoza/google-translate-php": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
